# nodedev

./: .env.example  .gitignore  LICENSE  README.md  TESTS_PASSED.md  TEST_SUMMARY.md  WORKFLOW_TEST_RESULTS.md  WORKFLOW_TEST_STATUS.txt  plan-GitHubMcpTesting.prompt.md  pyproject.toml
.github/: copilot-instructions.md
.github/prompts/: plan-comfyuiXtremetools.prompt.md
.github/workflows/: ci.yml
ComfyUI-Xtremetools/: README.md
ComfyUI-Xtremetools/src/comfyui_xtremetools/: __init__.py  alias.py
Docs/: BEST_PRACTICES.md  LM_STUDIO.md  MIRRORING.md  PROMPT_ENGINEERING_OPTIMIZATION.md  README.md  XDEV_NOTES.md
Xtremetools/: README.md  __init__.py  workflow_schema.json
Xtremetools/config/: supported_models.json
Xtremetools/src/comfyui_xtremetools/: __init__.py  alias.py  config.py  generator.py  logger.py  node_discovery.py  type_registry.py  (+1 more)
scripts/: refresh_types.py
tests/: README.md  check_env.py  conftest.py  snapshot_utils.py  test_alias_registry.py  test_lm_studio_nodes.py  test_node_discovery.py  test_nodes.py  test_prompt_nodes.py  test_workflow_nodes.py  test_workflow_postprocessor.py  test_workflow_smoke.py
tests/mcp/: __init__.py  harness.py  test_node_contracts.py  test_workflow_e2e.py
workflows/: README.md  chain_of_thought_enhanced.json  chain_of_thought_reasoning.json  complete_lm_pipeline.json  context_aware_analysis.json  meta_workflow_demo.json  meta_workflow_generator.json  prompt_engineering_showcase.json  quality_control_demo.json  sdxl_persona_prompt_generator.json  simple_few_shot_example.json
🤖Xtremetools/: README.md
(+36 files in other folders)
