[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "comfyui-xtremetools"
version = "0.1.0"
description = "Custom node toolkit targeting ComfyUI workflows"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT License"}
authors = [{name = "Xtremetools Maintainers"}]
dependencies = [
    "pydantic>=2.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.1",
]

[tool.setuptools.packages.find]
where = ["Xtremetools/src"]

[tool.pytest.ini_options]
pythonpath = ["Xtremetools/src"]
testpaths = ["tests"]
markers = [
    "mcp: Marks tests that exercise the MCP harness; opt-in for slower suites",
]
